--- a/app.json
+++ b/app.json
@@ -4,8 +4,8 @@
   "description": "",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#00bfff",
+  "background_color": "#1f1f1f",
+  "theme_color": "#ff4500",
   "icons": [
     {
       "src": "https://i.imgur.com/BZVhAAk.jpeg",
